-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
b36aa4c63 (dev)
Slice view doesn't seem to use the same material for the bars as main view. Range gradient support is missing.
- depends on
-
QTBUG-112342 Bars3D crashes in selection if colorStyle is Theme3D.ColorStyleRangeGradient
-
- Closed
-
- relates to
-
QTBUG-111685
Fix the colours of the bars on slice graph
-
- Closed
-
| For Gerrit Dashboard: QTBUG-112344 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 468793,2 | Handle slice view for range gradient | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |