Handle slice view for range gradient

Also streamline the slice view bar creation for
other color styles.

Fixes: QTBUG-112344
Change-Id: Ife75323a35fc3cf28365e1eb2da745044c4cc61b
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>